--- a/src/app/signup-form/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form/signup-form.component.html
@@ -1,14 +1,21 @@
-<form>
+<form [formGroup]="form">
     <div class="form-group">
         <label for="username">Username</label>
         <input 
+            formControlName="username"
             id="username" 
             type="text" 
             class="form-control">
+            <div *ngIf="username.touched && username.invalid" class="alert alert-danger">
+               <div *ngIf="username.errors.required">Username is required</div>
+               <div *ngIf="username.errors.cannotContainSpace">Cannot contain space</div>
+               <div *ngIf="username.errors.minlength"> Min {{username.errors.minlength.requiredLength}} is needed! </div>
+            </div>
     </div>
     <div class="form-group">
         <label for="password">Password</label>
         <input 
+        formControlName="password"
             id="password" 
             type="text" 
             class="form-control">
