--- a/src/app/signup-form/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form/signup-form.component.html
@@ -1,4 +1,6 @@
-<form [formGroup]="form">
+<form [formGroup]="form" (ngSubmit)="login()">
+    <div *ngIf="form.errors" class="alert alert-danger">Creds incorrect</div>
+    <div formGroupName="account">
     <div class="form-group">
         <label for="username">Username</label>
         <input 
@@ -6,10 +8,12 @@
             id="username" 
             type="text" 
             class="form-control">
+            <div *ngIf="username.pending">Checking for uniqueness...</div>
             <div *ngIf="username.touched && username.invalid" class="alert alert-danger">
                <div *ngIf="username.errors.required">Username is required</div>
                <div *ngIf="username.errors.cannotContainSpace">Cannot contain space</div>
                <div *ngIf="username.errors.minlength"> Min {{username.errors.minlength.requiredLength}} is needed! </div>
+               <div *ngIf="username.errors.shoudlbeUnique"> Already taken! </div>
             </div>
     </div>
     <div class="form-group">
@@ -20,5 +24,6 @@
             type="text" 
             class="form-control">
     </div>
+</div>
     <button class="btn btn-primary" type="submit">Sign Up</button>
 </form>
