--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <!-- <app-like></app-like>
 <app-contact-form></app-contact-form> 
 <app-course-form></app-course-form>
-<signup-form></signup-form>-->
+<signup-form></signup-form>
+<app-password-form></app-password-form>-->
 
-<app-password-form></app-password-form>
+<app-post></app-post>
+
+
